--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<img width=\"170\" height=\"170\" align=\"left\" style=\"float: left; margin: 0 10px 0 0;\" alt=\"Discord.JS Tony | Censor Bot\" src=\"https://media.discordapp.net/attachments/741659143273709588/820780173036617768/djs.png\">",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
   },
   "repository": {
